@@ -6,6 +6,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Send emails from rootadmin or group admin's email address where applicable rather than no-reply@
 - phoromatic: Scroll bar on local suites page condensing
 - phoromatic: Add "End Ticket" option to benchmark page
+- phoromatic: Allow stress tests up to ten days
 
 Phoronix Test Suite Milestone 4
 25 February 2015
